tests/rosetta/out/Smalltalk/averages-median-1.out
/tmp/averages-median-1.st:7: parse error, expected ']'
